Starting the configuration files

--- a/templates/dr-data-explorer.html.twig
+++ b/templates/dr-data-explorer.html.twig
@@ -56,7 +56,8 @@ var DATAFLOW={
 {% endfor %}
 <link rel="stylesheet" href="{{files_to_add.de_css}}">
 
-<script src="{{files_to_add.de_settings}}"></script>
+<script src="{{files_to_add.de_settings_js}}"></script>
+<script src="{{files_to_add.de_url_changer_js}}"></script>
 
 {% for react_script in files_to_add.react_js %}
 <script src="{{react_script}}"></script>
